# aula06_bootcamp

./: .flake8  main.py  main_02.py  pyproject.toml
helper/: azure.py
